tests/course/errors/GetErrorUuid.bru
meta {
  name: GetErrorUuid
  type: http
  seq: 1
}

get {
  url: {{baseUrl}}/courses/{{invalidUuid}}
  body: none
  auth: none
}

assert {
  res.status: eq 400
  res.body.message: matches Invalid uui
}
